// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render align 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-vew83c"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-m6ef6e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render defaultValue 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-m6ef6e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value="Olaf"
  />
</div>
`;

exports[`props should render disabled 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-m6ef6e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
  disabled=""
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    disabled=""
    id="text-input"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render gap 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-1jp80xd"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render isRounded 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-m6ef6e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render isSeamless 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-m6ef6e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render justify 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-1lwoyog"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render multiline 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-iil01c"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <textarea
    autocomplete="off"
    class="css-m7fi32"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
  />
</div>
`;

exports[`props should render prefix 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-m6ef6e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    prefix="[object Object]"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-m6ef6e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-791mwm"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render suffix 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-m6ef6e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value=""
  />
</div>
`;

exports[`props should render value 1`] = `
<div
  class="wp-components-flex wp-components-base-field wp-components-text-input css-m6ef6e"
  data-g2-c16t="true"
  data-g2-component="TextInputWrapper"
>
  <input
    autocomplete="off"
    class="css-7h3rix"
    data-g2-c16t="true"
    data-g2-component="TextInput"
    id="text-input"
    spellcheck="false"
    type="text"
    value="Olaf"
  />
</div>
`;
